--- a/package.json
+++ b/package.json
@@ -57,12 +57,31 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "babel-runtime": "^6.26.0",
+    "camel-case": "^3.0.0",
+    "cfonts": "^1.1.3",
+    "change-case": "^3.0.1",
+    "constant-case": "^2.0.0",
+    "core-js": "^2.5.3",
+    "dot-case": "^2.1.1",
+    "header-case": "^1.0.1",
     "koa": "^2.4.1",
     "koa-body": "^2.5.0",
     "koa-router": "^7.3.0",
     "koa-validate": "^1.0.7",
+    "lower-case": "^1.1.4",
     "mongoose": "^4.13.7",
+    "no-case": "^2.3.2",
+    "param-case": "^2.1.1",
+    "pascal-case": "^2.0.1",
+    "path-case": "^2.1.1",
+    "sentence-case": "^2.1.1",
+    "snake-case": "^2.1.0",
     "socket.io": "^2.0.4",
+    "swap-case": "^1.1.2",
+    "title-case": "^2.1.1",
+    "upper-case": "^1.1.3",
+    "upper-case-first": "^1.1.2",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
