--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "node-sass": "^4.7.2",
     "require-dir": "^0.3.0",
     "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^2.0.0",
     "spectron": "^3.7.1",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
